--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "framer-motion": "^4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-css-modules-transform": "^4.4.2",
     "react": "^17.0.2",
+    "react-css-modules": "^4.7.11",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^1.0.1"
@@ -23,7 +26,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "chromatic": "npx chromatic --project-token=91c45008b513"
+    "chromatic": "npx chromatic --project-token=91c45008b513",
+    "test-storybook": "test-storybook"
   },
   "eslintConfig": {
     "extends": [
@@ -56,15 +60,20 @@
   "devDependencies": {
     "@storybook/addon-actions": "^6.5.3",
     "@storybook/addon-essentials": "^6.5.3",
+    "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.3",
     "@storybook/builder-webpack5": "^6.5.3",
+    "@storybook/jest": "0.0.10",
     "@storybook/manager-webpack5": "^6.5.3",
     "@storybook/node-logger": "^6.5.3",
     "@storybook/preset-create-react-app": "^4.1.0",
     "@storybook/react": "^6.5.3",
+    "@storybook/test-runner": "^0.2.0",
+    "@storybook/testing-library": "0.0.13",
     "chromatic": "^6.6.3",
     "msw": "^0.42.3",
-    "msw-storybook-addon": "^1.6.3"
+    "msw-storybook-addon": "^1.6.3",
+    "webpack": "^5.73.0"
   },
   "readme": "ERROR: No README data found!",
   "_id": "ui-testing-guide-code@0.1.0",
